--- a/paper-v1.tex
+++ b/paper-v1.tex
@@ -55,10 +55,10 @@ In this paper we propose a solution to the problem of reviewers recognition base
 \section{Background}
 \subsection{Peer-review: present problems and mild solutions}
 Peer review is still the only quality control mechanism devoted to evaluate scientific outcomes. The purpose of peer review is "improving the quality of the published paper, determining the originality of the manuscript, determining the importance of the findings, detecting fraud, and detecting plagiarism." \cite{Gropp-PeerRevStress}. However, the system is 'ﬂawed' and outdated \cite{Smith2006} and presents multifaceted issues, here reviewed.
-\paragraph{A slow multi-stage process.} The main issues affecting the effectiveness of peer-review is the delay between paper submission and journal acceptance for publication. The traditional peer-review process is completely controlled by the editor(s). The author(s) submit manuscript to the journal where an editorial team assesses if the paper meets the scopes of the journal and novelty criteria. If the editorial decision is to send the manuscript for review, the handling editor personally selects potential reviewers. The reviewers identity is usually only know to the editor but is hidden to the authors or the other reviewers themselves (single-blind review). Reviewers independently conduct their reviews by exposing in their reports strengths and weaknesses of the manuscript and sometimes substantially improving the draft. Depending on the decision is a major or minor revision, authors are invited to re-submit a corrected or improved version of the manuscript with a letter to the reviewers. The same reviewers might be contacted again to continue the same peer-review process. This process can take multiple rounds and is a huge time investment both for authors and reviewers. An analysis of all papers published in PubMed for a time period of 30 years claims that the median review time is around 100 days\cite{Kendall-peerrev}.
-\paragraph{Lack of recognition.} Peer-reviewing is an invisible activity purely conducted on voluntary basis, neither paid by the journals or officially credited via standard scientific metrics (such as the ones that establish the 'impact factor' of an author). Thus, it does not lead to advancements in career or help securing grants. Researchers are motivated in doing peer-review for a sense of belonging and a desire to 'give back' to the community. A major consequence of not promoting incentives for the quality (and quantity) of peer-reviews is to either slow down publication of potentially good research which awaits for validation or let bad science be published through sloppy and uncritical reviews.
-\paragraph{Fraud and misconduct.} Due to the 'publish or perish culture' pressures, unethical behaviour from reviewers has been occasionally reported, from abusive behaviour towards authors \cite{Smith2006,tragedy-reviewers} to identity fraud. Some studies have reported an improvement in the transparency and 'civility; of the review process when open reports are released according to the standards of open peer review.
-\paragraph{Social and cognitive biases.} Given the fact that anonymity is usually asymmetrically applied only for reviewers, many power related dynamics can influence the reviewers decision, such as gender or cultural discrimination, social prestige of the institution. To solve this problem some journals have implemented double-blind review process (identity of both authors and reviewers are masked) which seems to reduce the bias towards minorities.
+\paragraph{A slow multi-stage process.} The main issues affecting the effectiveness of peer-review is the delay between paper submission and journal acceptance for publication. The traditional peer-review process is completely controlled by the editor(s). The author(s) submit manuscript to the journal where an editorial team assesses if the paper meets the scopes of the journal and novelty criteria. If the editorial decision is to send the manuscript for review, the handling editor personally selects potential reviewers. The reviewers identity is usually only known to the editor but is hidden to the authors or the other reviewers themselves (single-blind review). Reviewers independently conduct their reviews by exposing in their reports strengths and weaknesses of the manuscript and sometimes substantially improving the draft. Depending on if the decision is a major or minor revision, authors are invited to re-submit a corrected or improved version of the manuscript with a letter to the reviewers. The same reviewers might be contacted again to continue the same peer-review process. This process can take multiple rounds and is a huge time investment both for authors and reviewers. An analysis of all papers published in PubMed for a time period of 30 years claims that the median review time is around 100 days\cite{Kendall-peerrev}.
+\paragraph{Lack of recognition.} Peer-reviewing is an invisible activity purely conducted on voluntary basis, neither paid by the journals or officially credited via standard scientific metrics (such as the ones that establish the 'impact factor' of an author). Thus, it does not lead to advancements in career or help securing grants. Researchers are motivated to do peer-review by a sense of belonging and a desire to 'give back' to the community. A major consequence of not promoting incentives for the quality (and quantity) of peer-reviews is to either slow down publication of potentially good research which awaits for validation or let bad science be published through sloppy and uncritical reviews.
+\paragraph{Fraud and misconduct.} Due to the 'publish or perish culture' pressures, unethical behaviour from reviewers has been occasionally reported, from abusive behaviour towards authors \cite{Smith2006,tragedy-reviewers} to identity fraud. Some studies have reported an improvement in the transparency and civility of the review process when open reports are released according to the standards of open peer review.
+\paragraph{Social and cognitive biases.} Given the fact that anonymity is usually asymmetrically applied only for reviewers, many power related dynamics can influence the reviewers decision, such as gender or cultural discrimination and social prestige of the institution. To solve this problem some journals have implemented double-blind review process (identity of both authors and reviewers are masked) which seems to reduce the bias towards minorities.
 \paragraph{Peer reviews need to be...reviewed.} There is high variability in the reliability and depth of reviews and a recurrent question is: "Who watches the watchers?".
 \paragraph{Need for more reviewers.} There is a disproportion between the progressive increase in journals publications and the number of experienced reviewers selected for the task which demands an expansion of the reviewer's pool including early career scientists. \cite{tragedy-reviewers}.
 
@@ -74,9 +74,9 @@ In this paper we propose Ants-Review, a new incentivisation mechanism built on a
 
 Here we describe the main features of Ants-Review.
 \paragraph{Incentivisation and recognition.} A typical business model for open source software (OSS) movement is open-source bounty. Bounties are a prize or monetary reward given for completing a task before a deadline \cite{BountyGit}. Examples of such platforms that allow funders (bounty backers) to pay developers (bounty hunters) for open source contributions are \emph{Gitcoin}\footnote[4]{\emph{Gitcoin}.\textsc{URL:} https://gitcoin.co.} and \emph{The Bounties Network}\footnote[5]{\emph{The Bounties Network}.\textsc{URL:}https://bounties.network.}. Incentives can be cryptographic tokens, unit of values registered on a blockchain network and that represent the quantity and quality of a service within a network.
-\newline In the network of the scientific community reviewers provide a service and those who consume it (authors, journals)  should be able to retribute with tokens, an internal cryptocurrency that can be spent externally. The amount of tokens reflects material and symbolic recognition of the performed work that can be statistically quantified for author-level metrics measuring the productivity and impact of a researcher.
+\newline In the network of the scientific community reviewers provide a service and those who consume it (authors, journals)  should be able to contribute with tokens, an internal cryptocurrency that can be spent externally. The amount of tokens reflects material and symbolic recognition of the performed work that can be statistically quantified for author-level metrics measuring the productivity and impact of a researcher.
 Thus, the system acts also as a reputation builder.
-\newline Moreover, to encourage commitment, reviewers who contribute consistently to multiple rounds of reviews exchange to the same manuscript can have their tokens accrue interest over time (see 3.2).
+\newline Moreover, to encourage commitment, reviewers who contribute consistently to multiple rounds of reviews on the same manuscript can have their tokens accrue interest over time (see 3.2).
 
 \paragraph{Transparency and re-usability of the records.} The peer-review history, including authors' replies and editors' recommendations, should be openly and permanently accessible to the community (in the form of 'open reports' of open peer-reviews) even before articles' publication in order to  make editorial decisions more democratic and prevent waste of knowledge. Following the example of models offered by journals peer-review consortia, such as the \emph{Neuroscience Peer Review Consortium}\footnote[6]{\emph{Neuroscience Peer Review Consortium}.\textsc{URL:}http://nprc.incf.org.} and independent companies like \emph{ResearchSquare}  and \emph{Peerage of Science}, peer-reviews in Ants-Review will be transferable across journals (like in 'cascading' or 'portable peer-reviews').
 
@@ -108,18 +108,18 @@ In the following sections we describe the architecture of the system and its bui
 \emph{Tokenomics}, which manages the incentive mechanism of the system (see Figure \ref{fig:contracts}, (\textbf{c, e, h})}).
 
 \subsubsection{AntsReview.}
-AntsReview (see Figure \ref{fig:contracts} (\textbf{a}) is the core of the smart contracts written in \emph{Solidity}\footnote[7]{\emph{Solidity}.\textsc{URL:}https://solidity.readthedocs.io.}, an object-oriented programming language for writing smart contracts that runs on the Ethereum Virtual Machine, deployed on Ethereum Rinkeby's Testnet\footnote[8]{\emph{Rinkeby Testnet}.\textsc{URL:}https://rinkeby.etherscan.io.}. AntsReview implements a bounty-like system where Alice (issuer) can issue an AntReview with the function \emph{issueAntReview()}.
+AntsReview (see Figure \ref{fig:contracts} (\textbf{a}) is the core of the smart contracts written in \emph{Solidity}\footnote[7]{\emph{Solidity}.\textsc{URL:}https://solidity.readthedocs.io.}, a contract-oriented programming language for writing smart contracts that runs on the Ethereum Virtual Machine, deployed on Ethereum Kovan Testnet\footnote[8]{\emph{Kovan Testnet}.\textsc{URL:}https://kovan.etherscan.io/.}. AntsReview implements a bounty-like system where Alice (issuer) can issue an AntReview with the function \emph{issueAntReview()}.
 \newline In order to create a transparent and openly accessible AntReview, Alice has to complete a series of required tasks:
  \begin{itemize}
-     \item \emph{upload of the file} containing the requirements of the peer-review and the paper to be reviewed into IPFS and specification of the IPFS hash to be stored in the Ethereum blockchain as PoE;
-     \item \emph{specification of a deadline} in the form of a unix timestamp after which the fulfillment will no longer be accepted;
-     \item \emph{specification of the amount of Ether} for the reward that will be transferred from Alice to the contract.
+     \item \emph{upload of the files} containing the requirements of the peer-review and the paper to be reviewed into IPFS, whose hash is stored into the Ethereum blockchain as PoE;
+     \item \emph{specification of a deadline} in the form of a UNIX timestamp after which the fulfillment will no longer be accepted;
+     \item \emph{specification of the Issuers and an Approver} to respectively modify the AntReview and approve the peer-reviews sent by the peer-reviewers;
 \end{itemize}
- \newline Bob (peer-reviewer) downloads the file with Alice's paper and requirements by leveraging on the content-addressing feature of IPFS, that allows anyone to find the document using an IPFS explorer; subsequently, Bob can submit a peer-review before the deadline by fulfilling the AntReview created by Alice, with the function \emph{fulfillAntReview()}, by specifying the AntReview of interest as well as the IPFS Hash of the peer-review uploaded on IPFS.
-Alice can accept the peer-review submitted by Bob with the function \emph{acceptAntReview()}, by specifying the AntReview as well as the peer-review of interest, that will transfer the reward specified for the AntReview from the contract to Bob.
-If Alice does not receive any peer-review, she can cancel the AntReview with the function \emph{cancelAntReview()}, by specifying the AntReview of interest, and the contract will transfer the reward for the AntReview back to Alice.
+ Bob (peer-reviewer) downloads the files relative to Alice's paper and requirements by leveraging on the content-addressing feature of IPFS, that allows anyone to find the document using an IPFS explorer; subsequently, Bob can submit a peer-review before the deadline by fulfilling the AntReview created by Alice, with the function \emph{fulfillAntReview()}, by uploading the peer-review on IPFS, whose hash is stored into Ethereum blockchain as PoE.
+The Approver can accept the peer-review submitted by Bob with the function \emph{acceptAntReview()}, by specifying the amount of ANTS that will be transferred as reward from the contract to Bob.
+If Alice does not receive any peer-review, she cancel the AntReview with the function \emph{cancelAntReview()}, by specifying the AntReview of interest, and the contract will transfer the reward for the AntReview back to Alice.
 
-Access management of the Ants-Review protocol is defined and controlled by AntsReviewRoles (see Figure \ref{fig:contracts} (\textbf{b})), that is implemented by leveraging on \emph{AccessControl.sol} by OpenZeppelin Solidity Library\footnote[9]{\emph{OpenZeppelin Library}.\textsc{URL:}https://openzeppelin.com.}, through the creation of the Issuer and Peer-Reviewer Roles.
+Access management of the Ants-Review protocol is defined and controlled by AntsReviewRoles (see Figure \ref{fig:contracts} (\textbf{b})), implemented by leveraging on \emph{AccessControl.sol} by OpenZeppelin Solidity Library\footnote[9]{\emph{OpenZeppelin Library}.\textsc{URL:}https://openzeppelin.com.} that it's used to define the Issuer and Peer-Reviewer Roles.
 \newline AntsReviewRoles also integrates a circuit breaker design pattern via \emph{Pausable.sol} by OpenZeppelin to allow the Pauser Role, that by default is granted to the Owner of the smart contracts, to be able to pause (or unpause) the functions in case of a security emergency, such as an attack to the smart contracts.
 
 \subsubsection{Privacy}
@@ -149,7 +149,7 @@ A Decentralized Autonomous Organization (DAO) could be formed in the future to a
 
 \subsection{A new community-driven standard?}
 As Tennant points out\cite{Tennant2017-F1000R}, a change is already happening in the publishing industry, especially with new born publishers opening up the review process (\emph{BioMed Central}, \emph{ELife}, \emph{Frontiers}, \emph{PeerJ}, \emph{F1000 Research}). If also pre-print platforms integrate peer-review into their platforms, the dissociation of initial scientific dissemination and scientific validation will force the publishing industry to adapt in order to keep up with the higher quality scientific process offered by alternative peer-review platforms and justify their added value.
-In our proposal we posed two possible integrations for Ants-Review, a simpler one which maintains part of the journals' power in the peer-review evaluation and more complex one that completely decouples the peer-review process from the publishers giving it back to the scientific community and applying concepts from mechanism design. This second option, which requires further implementations, is the one we aim at. Indeed, we foresee that the future will evolve towards community-organized peer reviews: peer reviews will be more and more independent from publishers, and researchers will be the ones seeking the papers to review with a reputation build within community and not journals.
+In our proposal we posed two possible integrations for Ants-Review, a simpler one which maintains part of the journals' power in the peer-review evaluation and more complex one that completely decouples the peer-review process from the publishers giving it back to the scientific community and applying concepts from mechanism design. This second option, which requires further implementations, is the one we aim at. Indeed, we foresee that the future will evolve towards community-organized peer reviews: peer reviews will be more and more independent from publishers, and researchers will be the ones seeking the papers to review to build reputation within the community and not journals.
 Peer reviews requires a standard: building smart-contracts for peer-reviews might set a first step in this direction and our work seems promising. We hope that soon the value of peer review as 'academic capital' will be recognized by research funders and hiring committees.
 
 \section{Conclusion}
@@ -157,12 +157,13 @@ In this paper we addressed a crucial problem within scholarly academic communica
 
 \small{
 \subsubsection{Supplementary material}
-Source code, DOI: 10.5281/zenodo.3953999; Proof of Concept (PoC) DApp, antsreview.on.fleek.co; Demo (PoC), DOI: 10.5281/zenodo.3964466.
+Source code, DOI: 10.5281/zenodo.3971044; 
+\newline DApp, https://ants-review.on.fleek.co;
 
 \subsubsection{Declaration of Competing Interest}
 The authors declare no competing interests.
 
-\subsubsection{Acknowledgements} We would like to thank Matteo A. Tambussi and Keno Budde for useful comments and discussions; Evan C. Harris for internal review; Marcelo Colmenero for the pixel art in Figure 1.}
+\subsubsection{Acknowledgements} We would like to thank Matteo A. Tambussi, Andy Tudhope, Evan C. Harris, Mitrasish Mukherjee and the external anonymous peer-reviewers.}
 
 
 % ---- Bibliography ----
